src/tui/render/snapshots/agent_bar__tui__render__config__tests__config_snapshot_editing.snap
---
source: src/tui/render/config.rs
expression: terminal.backend()
---
"┏ Waybar Config ━━━┓┏ fxRate  [editando]  ━━━━━━━━━━━━━━━━━━━━━┓"
"┃   providers      ┃┃ 6.25                                     ┃"
"┃   providerOrder  ┃┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┃   separators     ┃┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃   displayMode    ┃┃ Taxa US$/BRL para custo em R$. Ex: 5.75  ┃"
"┃ > fxRate         ┃┃ Enter confirma   Esc cancela             ┃"
"┃   signal         ┃┃                                          ┃"
"┃   interval       ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┃                  ┃┃                                          ┃"
"┗━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
