src/tui/render/snapshots/agent_bar__tui__render__config__tests__config_snapshot_with_status_msg.snap
---
source: src/tui/render/config.rs
expression: terminal.backend()
---
"╭ Waybar Config ───╮╭ providers  ──────────────────────────────╮"
"│ > providers      ││ claude, codex                            │"
"│   providerOrder  │╰──────────────────────────────────────────╯"
"│   separators     │╭──────────────────────────────────────────╮"
"│   displayMode    ││ IDs separados por virgula. Ex: claude, co│"
"│   fxRate         ││                                          │"
"│   signal         ││ Configuracao salva e Waybar recarregado. │"
"│   interval       ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││                                          │"
"│                  ││   ↵ editar     s salvar     esc voltar   │"
"╰──────────────────╯╰──────────────────────────────────────────╯"
